[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 6.2",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/fparser/_version.py"
git_describe_command = "git describe --dirty --tags --long --first-parent"
