[metadata]
name = fparser
author = Andrew Porter
author_email = trackstand.andy@gmail.com
license = BSD 3-Clause License
url = https://github.com/stfc/fparser
description = The fparser project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Fortran
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Source = https://github.com/stfc/fparser
    Tracker = https://github.com/stfc/fparser/issues
    Documentation = https://fparser.readthedocs.io/en/latest/

[options]
package_dir =
    =src
packages = find:
# We need the following line to ensure we get the fparser/log.config
# file installed.
include_package_data = True
install_requires =
    six
    importlib-metadata; python_version >= "3.6"

[options.packages.find]
where=src

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
tests = pytest >= 3.3.0

[options.entry_points]
console_scripts =
    fparser2 = fparser.scripts.fparser2:main

[build_sphinx]
source-dir = doc
